--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ jsonpath-python==1.0.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kafka-python==2.0.2
-keras==3.6.0
+keras>=3.6.0
 lazy-object-proxy==1.10.0
 libclang==18.1.1
 llvmlite==0.43.0
@@ -74,14 +74,14 @@ namex==0.0.8
 narwhals==1.13.4
 networkx==3.4.2
 numba==0.60.0
-numpy==2.0.2
+numpy>=1.21.0
 openai==1.55.0
 openai-whisper==20240930
 opt_einsum==3.4.0
 optree==0.13.1
 outcome==1.3.0.post0
 packaging==23.2
-pandas==2.0.3
+pandas>=2.0.3
 pathspec==0.12.1
 Pillow==9.5.0
 platformdirs==4.3.6
@@ -129,7 +129,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 sounddevice==0.5.1
 SpeechRecognition==3.11.0
-streamlit==1.24.0
+streamlit>=1.24.0
 sympy==1.13.1
 tenacity==8.5.0
 tensorboard==2.18.0
